<resources>
    <string name="app_name">surf_summer</string>
    <string name="input_text">Cocktail name</string>
    <string name="label_text">Title</string>
    <string name="app_title">My cocktails</string>
    <string name="create_cock">Add your first cocktail here</string>
    <string name="pink_lemona">Pink Lemonade</string>
    <string name="cocktail_ti">Pink Lemonade</string>
    <string name="cocktail_de">To make this homemade pink lemonade, simply combine all the ingredients in a pitcher.</string>
    <string name="edit_button">Edit</string>
    <string name="sign">-</string>
    <string name="recipe">Recipe:</string>
    <string name="recipe_text">Muddle lime with leaves from the mint using a pestle and mortar. Mix with sprite. Add ice if needed.</string>
    <string name="empty_photo">Empty photo</string>
    <string name="cocktail_title">title</string>
    <string name="empty_image_background">Empty image background</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="supporting_">Optional field</string>
    <string name="cocktail_description">Description</string>
    <string name="cocktail_recipe">Recipe</string>
    <string name="add_ingredient_title">Add ingredient</string>
    <string name="ingredient_hint">Ingredient</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="add_button">Add</string>
    <string name="delete_button">Delete</string>
</resources>