<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="329dp"
    android:layout_height="328dp"
    android:padding="24dp"
    android:background="@drawable/frame_50"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/add_ing_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_ingredient_title"
        android:textAppearance="@style/cocktail_ti"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredient_hint"
                android:layout_marginTop="24dp"

                app:layout_constraintTop_toBottomOf="@+id/add_ing_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/supporting_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_ingredient"
        android:textAppearance="@style/supporting_"
        android:lineSpacingExtra="0sp"
        android:translationY="-0.13sp"
        android:gravity="top"
        android:layout_marginHorizontal="8dp"

        app:layout_constraintTop_toBottomOf="@id/ingredient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/save_button"
        style="?attr/materialButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"

        app:layout_constraintTop_toBottomOf="@+id/supporting_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/cancel_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"

        app:layout_constraintTop_toBottomOf="@+id/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>