<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.CreateCocktailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            >

            <ImageView
                android:id="@+id/image_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:background="@drawable/rectangle_1"
                android:contentDescription="@string/empty_image_background"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ImageView
                android:id="@+id/empty_photo"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/empty_photo"
                android:contentDescription="@string/empty_photo"

                app:layout_constraintTop_toTopOf="@id/image_id"
                app:layout_constraintBottom_toBottomOf="@id/image_id"
                app:layout_constraintStart_toStartOf="@id/image_id"
                app:layout_constraintEnd_toEndOf="@id/image_id"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cocktail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cocktail_title"
                android:layout_marginTop="40dp"

                app:layout_constraintTop_toBottomOf="@+id/image_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cocktail_description"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:hint="@string/cocktail_description"
                android:layout_marginTop="44dp"

                app:layout_constraintTop_toBottomOf="@+id/cocktail_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/supporting_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/supporting_"
                android:textAppearance="@style/supporting_"
                android:lineSpacingExtra="0sp"
                android:translationY="-0.13sp"
                android:gravity="top"
                android:layout_marginHorizontal="8dp"

                app:layout_constraintTop_toBottomOf="@id/cocktail_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredients_add_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"

                app:layout_constraintTop_toBottomOf="@+id/cocktail_description"
                app:layout_constraintStart_toStartOf="parent"
                />

            <View
                android:id="@+id/iconButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/circular_button"


                app:layout_constraintTop_toTopOf="@id/ingredients_add_recycler_view"
                app:layout_constraintBottom_toBottomOf="@id/ingredients_add_recycler_view"
                app:layout_constraintStart_toEndOf="@id/ingredients_add_recycler_view"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cocktail_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cocktail_recipe"
                android:layout_marginTop="40dp"

                app:layout_constraintTop_toBottomOf="@id/ingredients_add_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/supporting_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/supporting_"
                android:textAppearance="@style/supporting_"
                android:lineSpacingExtra="0sp"
                android:translationY="-0.13sp"
                android:gravity="top"
                android:layout_marginHorizontal="8dp"

                app:layout_constraintTop_toBottomOf="@id/cocktail_recipe"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/save_button"
                style="?attr/materialButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save_button"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginTop="44dp"
                android:layout_marginBottom="10dp"

                app:layout_constraintTop_toBottomOf="@+id/cocktail_recipe"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"

                app:layout_constraintTop_toBottomOf="@+id/save_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>