<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.CocktailDetailFragment">

    <ImageView
        android:id="@+id/cocktail_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle_17"
        android:scaleType="centerCrop"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="478dp"
        android:background="@drawable/frame_41"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        app:layout_constraintTop_toBottomOf="@id/cocktail_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/cocktail_ti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cocktail_ti"
                android:textAppearance="@style/cocktail_ti"
                android:lineSpacingExtra="-4sp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/cocktail_de"
                android:layout_width="328dp"
                android:layout_height="38dp"
                android:text="@string/cocktail_de"
                android:textAppearance="@style/cocktail_de"
                android:lineSpacingExtra="-2sp"
                android:gravity="center_horizontal|top"
                android:layout_marginTop="21dp"

                app:layout_constraintTop_toBottomOf="@id/cocktail_ti"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredients_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"

                app:layout_constraintTop_toBottomOf="@+id/cocktail_de"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/recipe_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe"
                android:layout_marginVertical="32dp"

                app:layout_constraintTop_toBottomOf="@+id/ingredients_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/recipe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|top"
                android:text="@string/recipe_text"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="24dp"


                app:layout_constraintTop_toBottomOf="@+id/recipe_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/edit_button"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/edit_button"
                android:textSize="24sp"
                android:textColor="@color/white"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>